MDEV-35959 Store the error message at the net layer when reading a packet from the server

This ensures that the error message is populated when the reading
fails with ER_NET_READ_INTERRUPTED, which at the client layer returns
without storing any error message as there is no corresponding CR_
error code.

Patch originally by Sergei Golubchik <serg@mariadb.com>